--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGODB_URL= mongodb+srv://Danish:qaz1250@cluster0.nifal4c.mongodb.net/chatapp?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URL= mongodb+srv://Danishsdd@cluster0.nifal4c.mongodb.net/chatapp?retryWrites=true&w=majority&appName=Cluster0dsds
 PORT=3000
 ACCESS_TOKEN_SECRET=daNishKhAn
 EXPIRY_TOKEN=1d
