--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGODB_URL= mongodb+srv://Danishsdd@cluster0.nifal4c.mongodb.net/chatapp?retryWrites=true&w=majority&appName=Cluster0dsds
+MONGODB_URL= ""
 PORT=3000
-ACCESS_TOKEN_SECRET=daNishKhAn
+ACCESS_TOKEN_SECRET=""
 EXPIRY_TOKEN=1d
